<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/txt_show"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignLeft="@+id/clr"
        android:layout_alignRight="@+id/res_show"
        android:textSize="25sp" />

    <Button
        android:id="@+id/four"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eight"
        android:layout_alignLeft="@+id/one"
        android:background="@drawable/buttonshape"
        android:text="@string/four" />

    <Button
        android:id="@+id/zero"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:layout_toRightOf="@+id/four"
        android:background="@drawable/buttonshape"
        android:text="@string/zero" />

    <Button
        android:id="@+id/nine"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/zero"
        android:layout_alignLeft="@+id/six"
        android:background="@drawable/buttonshape"
        android:text="@string/nine" />

    <Button
        android:id="@+id/two"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/five"
        android:layout_toLeftOf="@+id/six"
        android:background="@drawable/buttonshape"
        android:text="@string/two" />

    <Button
        android:id="@+id/three"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/six"
        android:layout_toRightOf="@+id/two"
        android:background="@drawable/buttonshape"
        android:text="@string/three" />

    <Button
        android:id="@+id/one"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/four"
        android:layout_alignParentLeft="true"
        android:background="@drawable/buttonshape"
        android:layout_marginLeft="24dp"
        android:text="@string/one" />

    <Button
        android:id="@+id/eight"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/six"
        android:layout_toLeftOf="@+id/nine"
        android:background="@drawable/buttonshape"
        android:text="@string/eight" />

    <Button
        android:id="@+id/seven"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/zero"
        android:layout_alignLeft="@+id/four"
        android:background="@drawable/buttonshape"
        android:text="@string/seven" />

    <Button
        android:id="@+id/five"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eight"
        android:layout_alignLeft="@+id/two"
        android:background="@drawable/buttonshape"
        android:text="@string/five" />

    <Button
        android:id="@+id/six"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nine"
        android:layout_toRightOf="@+id/zero"
        android:background="@drawable/buttonshape"
        android:text="@string/six" />

    <Button
        android:id="@+id/clr"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/two"
        android:layout_alignLeft="@+id/one"
        android:background="@drawable/buttonshape2"
        android:text="@string/del" />

    <Button
        android:id="@+id/mul"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/clr"
        android:layout_toRightOf="@+id/clr"
        android:background="@drawable/buttonshape2"
        android:text="@string/div" />

    <Button
        android:id="@+id/div"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mul"
        android:layout_toRightOf="@+id/two"
        android:background="@drawable/buttonshape2"
        android:text="@string/mul" />

    <Button
        android:id="@+id/sub"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/three"
        android:layout_toRightOf="@+id/div"
        android:background="@drawable/buttonshape2"
        android:text="@string/sub" />

    <Button
        android:id="@+id/add"
        android:layout_width="90dp"
        android:layout_height="96dp"
        android:layout_alignLeft="@+id/sub"
        android:layout_below="@+id/sub"
        android:background="@drawable/buttonshape3"
        android:text="@string/add" />

    <Button
        android:id="@+id/equal"
        android:layout_width="90dp"
        android:layout_height="96dp"
        android:layout_alignLeft="@+id/add"
        android:layout_below="@+id/add"
        android:background="@drawable/buttonshape3"
        android:text="@string/equal" />

    <TextView
        android:id="@+id/res_show"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_above="@+id/div"
        android:layout_alignRight="@+id/sub"
        android:layout_marginBottom="13dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/flt"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nine"
        android:layout_below="@+id/nine"
        android:background="@drawable/buttonshape"
        android:textSize="25sp"
        android:text="@string/flt" />

    <Button
        android:id="@+id/sign"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/seven"
        android:layout_below="@+id/seven"
        android:background="@drawable/buttonshape"
        android:text="@string/sign" />

</RelativeLayout>
